<resources>
    <string name="app_name">drawingbysound</string>
    <string name="sound_btn_text">Tap to give sound command</string>
    <string name="save_image">Save image to internal storage</string>
    <string name="load_image">Load previously saved image</string>
    <string name="clear_mode">Clear Screen</string>
    <string name="fill_mode">Fill Mode</string>
    <string name="pen_mode">Pen Mode</string>
    <string name="earaser_mode">Eraser Mode</string>
    <string name="sound_permission_given">Record audio permission is given!</string>
    <string name="denied_result">Cannot provide sound recognition function!</string>
    <string name="denied_result_alert">Please allow this app to record audio first.</string>
    <string name="receiving_sound_command">Receiving sound Cammand</string>
    <string name="no_sound_text">Device has troubles recognizing sound commands</string>
    <string name="soundResult">Result is:</string>
    <string name="pen_fill_together">Cannot process fill mode and pen mode at the same time.</string>
    <string name="multi_color_detection">Multiple colors detected. Please provide only one color.</string>
    <string name="image_saved_successful">Image has been saved!</string>
    <string name="cannot_save_image">Error, image not saved.</string>
    <string name="no_image">Cannot find saved image.</string>
    <string name="error_loading_image">We have an error loading saved image.</string>
    <string name="recognition_result">Sound Recognition result is here:</string>

</resources>