<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/command_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="聲音識別" />

    <Button
        android:id="@+id/command_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sound_btn_text" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_image" />

    <Button
        android:id="@+id/load_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:text="@string/clear_mode" />

        <Button
            android:id="@+id/fill_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:text="@string/fill_mode" />
        <Button
            android:id="@+id/pen_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:text="@string/pen_mode" />
        <Button
            android:id="@+id/eraser_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:text="@string/earaser_mode" />

    </LinearLayout>
<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/black_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/black" />

        <Button
            android:id="@+id/white_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/white" />

        <Button
            android:id="@+id/gray_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/gray" />

        <Button
            android:id="@+id/red_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/red" />

        <Button
            android:id="@+id/blue_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/yellow_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/yellow" />

        <Button
            android:id="@+id/green_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/green" />

        <Button
            android:id="@+id/magenta_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:backgroundTint="@color/magenta" />



    </LinearLayout>

</HorizontalScrollView>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>